# bookings-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  FIRESTORE_MIGRATION_PLAN.md  README.md  WHAT_IS_ON_TOOL_CONTEXT.md  calendar_tool.txt  firebase.json  firestore.indexes.json  firestore.rules  main.py  makefile  pyproject.toml  requirements.txt  screenshot_mcp_wrapper.js
.cursor/rules/: agent-architecture.mdc  angular-19-coding-standards.mdc  angular-19-feature-guidelines.mdc  deployment-usage.mdc  project-structure.mdc  tool-guidance.mdc
NOT_IN_USE_deployment/: remote.py
bookings_agent/: __init__.py  agent.py  booking_flow.py  firestore_service.py  prompt.py  prompts.py
bookings_agent/sub_agents/: __init__.py
bookings_agent/sub_agents/architect_james_brown/: __init__.py  agent.py
bookings_agent/tools/: __init__.py  current_time.py  google_calendar.py  interact_with_firestore.py  natural_date_parser.py  save_user_enquiry.py  validate_email.py
deployment/: local.py  remote.py
frontend/: README.md  angular.json  package-lock.json  package.json  playwright.config.ts  proxy.conf.json
frontend/e2e/: README-SMOKE-TEST.md  README.md  app-check.spec.ts  booking-flow.spec.ts  setup.sh
frontend/src/: index.html  main.ts  styles.scss
server/: __init__.py  serve.py
simulation_guide/: agent.py  firestore_memory_service.py  firestore_service.py  models.py  prompt.py
simulation_guide/static/: frontend.html
simulation_guide/sub_agents/: __init__.py
simulation_guide/tools/: __init__.py  current_time.py  interact_with_firestore.py  set_user_pref.py  store_memory.py
(+68 files in other folders)
